from abc import ABC, abstractmethod
from dataclasses import dataclass
from typing import Optional, Dict, List, Any
import torch

from ovo.entities.instance3d import Instance3D
from ovo.entities.pe_generator import PEGenerator


@dataclass
class FusionFrameInput:
    image: torch.Tensor
    binary_maps: torch.Tensor
    matched_ins_ids: List[int]
    kf_id: int


class FusionEncoderAdapter(ABC):
    """
    Adapter for optional fusion encoders (PE, SAM3, etc.)

    Encapsulates all encoder-specific logic for:
    - Descriptor extraction
    - Storage management
    - Instance updates
    - Merge transfers
    """

    @abstractmethod
    def compute_and_update(self, frame: FusionFrameInput, keyframes: Dict[str, Any], objects: Dict[int, Instance3D]) -> None:
        """Extract embeddings and update instances."""
        pass

    @abstractmethod
    def update_objects(self, objects: Dict[int, Instance3D], keyframes: Dict[str, Any]) -> None:
        """Batch update all objects with fused descriptors."""
        pass

    @abstractmethod
    def transfer_on_merge(self, source_ids: List[int], target_id: int, keyframes: Dict[str, Any]) -> None:
        """Transfer descriptors during instance merge."""
        pass

    @abstractmethod
    def cleanup_keyframe(self, kf_id: int, keyframes: Dict[str, Any]) -> None:
        """Remove descriptors for deleted keyframe."""
        pass


class PEFusionAdapter(FusionEncoderAdapter):
    """Adapter for Perception Encoder fusion."""

    def __init__(self, pe_generator: PEGenerator, storage_key: str = "ins_pe_descriptors"):
        self.generator = pe_generator
        self.storage_key = storage_key

    def compute_and_update(self, frame: FusionFrameInput, keyframes: Dict[str, Any], objects: Dict[int, Instance3D]) -> None:
        if frame.image is None or frame.binary_maps is None or len(frame.matched_ins_ids) == 0:
            return

        pe_embeds = self.generator.extract_pe(frame.image, frame.binary_maps).cpu()

        if frame.kf_id not in keyframes[self.storage_key]:
            keyframes[self.storage_key][frame.kf_id] = {}

        for idx, ins_id in enumerate(frame.matched_ins_ids):
            if ins_id == -1:
                continue
            keyframes[self.storage_key][frame.kf_id][ins_id] = pe_embeds[idx:idx+1]
            if ins_id in objects:
                objects[ins_id].update_pe(keyframes[self.storage_key])

    def update_objects(self, objects: Dict[int, Instance3D], keyframes: Dict[str, Any]) -> None:
        """
        Batch update all objects with fused PE descriptors.
        
        Args:
            objects: Dictionary of Instance3D objects.
            keyframes: Global keyframes dictionary.
        """
        for obj in objects.values():
            if obj.to_update_pe:
                obj.update_pe(keyframes[self.storage_key])

    def transfer_on_merge(self, source_ids: List[int], target_id: int, keyframes: Dict[str, Any]) -> None:
        """
        Transfer PE descriptors from source instances to target during merge.
        
        Args:
            source_ids: List of source instance IDs to merge from.
            target_id: Target instance ID to merge into.
            keyframes: Global keyframes dictionary.
        """
        if self.storage_key not in keyframes:
            return

        for kf_id in keyframes[self.storage_key]:
            for source_id in source_ids:
                if source_id in keyframes[self.storage_key][kf_id]:
                    # Move descriptor from source to target
                    # If multiple sources map to same target in same frame, last one wins (simple override)
                    keyframes[self.storage_key][kf_id][target_id] = \
                        keyframes[self.storage_key][kf_id].pop(source_id)

    def cleanup_keyframe(self, kf_id: int, keyframes: Dict[str, Any]) -> None:
        """
        Remove PE descriptors for deleted keyframe.
        
        Args:
            kf_id: ID of keyframe to remove.
            keyframes: Global keyframes dictionary.
        """
        if kf_id in keyframes[self.storage_key]:
            del keyframes[self.storage_key][kf_id]


class SAM3FusionAdapter(FusionEncoderAdapter):
    """Adapter for SAM3 fusion."""

    def __init__(self, sam3_generator: "SAM3Generator", storage_key: str = "ins_sam3_descriptors"):
        self.generator = sam3_generator
        self.storage_key = storage_key

    def compute_and_update(self, frame: FusionFrameInput, keyframes: Dict[str, Any], objects: Dict[int, Instance3D]) -> None:
        if frame.image is None or frame.binary_maps is None or len(frame.matched_ins_ids) == 0:
            return

        sam3_embeds = self.generator.extract_sam3(frame.image, frame.binary_maps).cpu()

        if frame.kf_id not in keyframes[self.storage_key]:
            keyframes[self.storage_key][frame.kf_id] = {}

        for idx, ins_id in enumerate(frame.matched_ins_ids):
            if ins_id == -1:
                continue
            keyframes[self.storage_key][frame.kf_id][ins_id] = sam3_embeds[idx:idx+1]
            if ins_id in objects:
                objects[ins_id].update_sam3(keyframes[self.storage_key])

    def update_objects(self, objects: Dict[int, Instance3D], keyframes: Dict[str, Any]) -> None:
        """
        Batch update all objects with fused SAM3 descriptors.

        Args:
            objects: Dictionary of Instance3D objects.
            keyframes: Global keyframes dictionary.
        """
        for obj in objects.values():
            if obj.to_update_sam3:
                obj.update_sam3(keyframes[self.storage_key])

    def transfer_on_merge(self, source_ids: List[int], target_id: int, keyframes: Dict[str, Any]) -> None:
        """
        Transfer SAM3 descriptors from source instances to target during merge.

        Args:
            source_ids: List of source instance IDs to merge from.
            target_id: Target instance ID to merge into.
            keyframes: Global keyframes dictionary.
        """
        if self.storage_key not in keyframes:
            return

        for kf_id in keyframes[self.storage_key]:
            for source_id in source_ids:
                if source_id in keyframes[self.storage_key][kf_id]:
                    # Move descriptor from source to target
                    # If multiple sources map to same target in same frame, last one wins (simple override)
                    keyframes[self.storage_key][kf_id][target_id] = \
                        keyframes[self.storage_key][kf_id].pop(source_id)

    def cleanup_keyframe(self, kf_id: int, keyframes: Dict[str, Any]) -> None:
        """
        Remove SAM3 descriptors for deleted keyframe.

        Args:
            kf_id: ID of keyframe to remove.
            keyframes: Global keyframes dictionary.
        """
        if kf_id in keyframes[self.storage_key]:
            del keyframes[self.storage_key][kf_id]